RESOLVED FIXED282537
CoreAudioCaptureSourceFactoryIOS does not need to register itself as an AudioSession observer
https://bugs.webkit.org/show_bug.cgi?id=282537
Summary CoreAudioCaptureSourceFactoryIOS does not need to register itself as an Audio...
youenn fablet
Reported 2024-11-04 06:15:24 PST
CoreAudioCaptureSourceFactoryIOS does not need to register itself as an AudioSession observer
Attachments
Radar WebKit Bug Importer
Comment 1 2024-11-04 06:16:05 PST
EWS
Comment 2 2024-11-05 01:48:55 PST
Committed 286144@main (5e09d740b66d): <https://commits.webkit.org/286144@main> Reviewed commits have been landed. Closing PR #36125 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.