CoreAudioCaptureSourceFactoryIOS does not need to register itself as an AudioSession observer rdar://139198634 https://bugs.webkit.org/show_bug.cgi?id=282537

Reviewed by Jean-Yves Avenard.

We no longer need to have CoreAudioCaptureSourceFactoryIOS register to AudioSession since CoreAudioCaptureSourceFactory is already doing it.

* Source/WebCore/platform/mediastream/ios/CoreAudioCaptureSourceIOS.h:
* Source/WebCore/platform/mediastream/ios/CoreAudioCaptureSourceIOS.mm:
(WebCore::CoreAudioCaptureSourceFactoryIOS::CoreAudioCaptureSourceFactoryIOS):
(WebCore::CoreAudioCaptureSourceFactoryIOS::~CoreAudioCaptureSourceFactoryIOS):

Canonical link: https://commits.webkit.org/286144@main