Source/WebCore/platform/mediastream/ios/CoreAudioCaptureSourceIOS.h
@@ -27,7 +27,6 @@
 
 #if ENABLE(MEDIA_STREAM) && PLATFORM(IOS_FAMILY)
 
-#include "AudioSession.h"
 #include "CoreAudioCaptureSource.h"
 #include <wtf/WeakHashSet.h>
 
